--- a/front/paginas/coresefont.html
+++ b/front/paginas/coresefont.html
@@ -10,15 +10,15 @@
 <body>
     <div class="aula-cores">
     <p class="aula-cores__escrita">
-         aqui um texto utilizando as cores com nome
-         <br>
-         pós o br
+        aqui um texto utilizando as cores com nome
+      <br>
+        pós o br
     </p>
     <p class="aula-cores__escrita">
-         aqui um texto utilizando as cores com nome
+        aqui um texto utilizando as cores com nome
     </p>
      <p class="aula-cores__tag-p">
-        aqui  um texto utilizando a tag p
+        aqui  um <span>texto</span> utilizando a <span>tag p</span>
      </p>
      <p class="aula-cores__hex">
         1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F
@@ -27,10 +27,7 @@
     <p class="aula-cores__rgba">
        texto em rgba
     </p>
-    <p class="aula-cores__hsl">
-        texto em hsl
-     </p>
-     <span>
+     <span class="aula-texto__text">
          SPAN -
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias voluptatem doloremque et sed? 
          Aliquid possimus eaque iure ducimus. Omnis animi officia dignissimos cum suscipit vel, 
